cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
Project(components)

if(UNIX)
  add_subdirectory(fftwrap)
  add_subdirectory(WebRTCVAD)
  add_subdirectory(PulseAudioInput)
  add_subdirectory(PulseAudioOutput)
endif(UNIX)

add_subdirectory(WavPlayer)
add_subdirectory(WavRecord)
add_subdirectory(AutoGainControl)
add_subdirectory(BeamForming)
add_subdirectory(ChannelSelector)
add_subdirectory(CombFilter)
add_subdirectory(DSArray)
add_subdirectory(EchoCanceler)
add_subdirectory(EchoSuppressor)
add_subdirectory(Gate)
add_subdirectory(Mixer)
add_subdirectory(NoiseReduction)
add_subdirectory(PortAudioInput)
add_subdirectory(PortAudioOutput)
add_subdirectory(SamplingRateConverter)
add_subdirectory(SignalGeneration)

